--- a/Views/ClassSection/_FilterSection.cshtml
+++ b/Views/ClassSection/_FilterSection.cshtml
@@ -66,6 +66,12 @@
                                         <span><i class="bi bi-calendar3 me-2"></i></span>
                                     </a>
                                 </span>
+
+                                <span id="viewKetQuaDiemDanh-@item.ID" tieudeForm="Kết quả điểm danh LHP @item.MaLHP - @item.TenHP" name="@item.ID">
+                                    <a style="font-size: 20px" role="button" data-bs-toggle="tooltip" data-bs-html="true" title="Kết quả điểm danh lớp học" class="text-success">
+                                        <span><i class="bi bi-calendar-check me-2"></i></span>
+                                    </a>
+                                </span>
                             }
 
                             @if (item.DeXuatTroGiang.Count < 1)
