--- a/Views/ResultApplyTeachingAssistant/_FilterResultApply.cshtml
+++ b/Views/ResultApplyTeachingAssistant/_FilterResultApply.cshtml
@@ -32,7 +32,7 @@
                                 }
                             </ul>
                         </td>
-                        <td valign="middle">@item.LopHocPhan.ThoiKhoaBieu.Sum(s => s.TC)</td>
+                        <td valign="middle">@item.LopHocPhan.ThoiKhoaBieu.Sum(s => s.SoTC)</td>
                         <td valign="middle" class="text-nowrap">
                             @if (item.DanhGiaPhongVan.Count < 1)
                             {
