--- a/Views/Shared/_DepartmentLayout.cshtml
+++ b/Views/Shared/_DepartmentLayout.cshtml
@@ -152,13 +152,13 @@
                             <ul class="nav flex-column">
                                 <li class="nav-item ">
                                     <a id="child-trogiang-register" class="child-nav-link nav-link "
-                                       href="@Url.Action("Register", "TeachingAssistant")">
+                                       href="@Url.Action("Register", "RegisterTeachingAssistant")">
                                         Form Đăng ký
                                     </a>
                                 </li>
                                 <li class="nav-item ">
                                     <a id="child-trogiang-advances" class="child-nav-link nav-link "
-                                       href="@Url.Action("Advances", "TeachingAssistant")">
+                                       href="@Url.Action("Advances", "AdvancesClassection")">
                                         Đề xuất trợ giảng
                                     </a>
                                 </li>
