--- a/Views/Shared/_StudentLayout.cshtml
+++ b/Views/Shared/_StudentLayout.cshtml
@@ -128,7 +128,7 @@
                             <ul class="nav flex-column">
                                 <li class="nav-item ">
                                     <a id="child-trogiang-apply" class="child-nav-link nav-link "
-                                       href="@Url.Action("Apply", "TeachingAssistant")">
+                                       href="@Url.Action("Apply", "ApplyTeachingAssistant")">
                                         Đăng ký
                                     </a>
                                 </li>
