--- a/Views/Shared/_TeacherLayout.cshtml
+++ b/Views/Shared/_TeacherLayout.cshtml
@@ -164,7 +164,7 @@
                                 <!-- Nav item -->
                                 <li class="nav-item ">
                                     <a id="child-trogiang-tasklist" class="child-nav-link nav-link "
-                                       href="@Url.Action("TaskList", "TeachingAssistant")">
+                                       href="@Url.Action("TaskList", "TaskManagement")">
                                         Quản lý công việc
                                     </a>
                                 </li>
