--- a/Views/Statisticals/StatisticalRemuneration.cshtml
+++ b/Views/Statisticals/StatisticalRemuneration.cshtml
@@ -465,4 +465,5 @@
 
 <script src="~/Validation/department/statisticals/thulao/filter.js"></script>
 <script src="~/Validation/department/statisticals/thulao/cauhinh.js"></script>
+<script src="~/Content/assets/libs/XLSX-Full/xlsx.full.min.js"></script>
 <script src="~/Validation/department/statisticals/exportfile.js"></script>
