--- a/Views/Shared/_TALayout.cshtml
+++ b/Views/Shared/_TALayout.cshtml
@@ -128,19 +128,19 @@
                             <ul class="nav flex-column">
                                 <li class="nav-item ">
                                     <a id="child-trogiang-apply" class="child-nav-link nav-link "
-                                       href="@Url.Action("Apply", "TeachingAssistant")">
+                                       href="@Url.Action("Apply", "ApplyTeachingAssistant")">
                                         Đăng ký
                                     </a>
                                 </li>
                                 <li class="nav-item ">
                                     <a id="child-trogiang-resultapply" class="child-nav-link nav-link "
-                                       href="@Url.Action("ResultApply", "TeachingAssistant")">
+                                       href="@Url.Action("ResultApply", "ResultApplyTeachingAssistant")">
                                         Kết quả đăng ký
                                     </a>
                                 </li>
                                 <li class="nav-item ">
                                     <a id="child-trogiang-tasklist" class="child-nav-link nav-link "
-                                       href="@Url.Action("TaskList", "TeachingAssistant")">
+                                       href="@Url.Action("TaskList", "TaskManagement")">
                                         Công việc
                                     </a>
                                 </li>
