Add function setting and export interview result Build Version 5.0

--- a/Views/ClassSection/Index.cshtml
+++ b/Views/ClassSection/Index.cshtml
@@ -203,7 +203,7 @@
     </div>
 
     <div class="modal fade" id="dexuattrogiang" tabindex="-1" role="dialog" aria-labelledby="dexuattrogiang" aria-hidden="true">
-        <div class="modal-dialog modal-xl  modal-dialog-scrollable modal-dialog-centered" role="document">
+        <div class="modal-dialog modal-xl  modal-dialog-scrollable modal-dialog-centered modal-dexuattrogiang-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title" id="dexuattrogiangTitle"></h5>
@@ -326,7 +326,6 @@
         </div>
     </div>
 </section>
-
 
 <section style="display: none" id="table-export-data">
 </section>
