--- a/Views/TeachingAssistant/Registereds.cshtml
+++ b/Views/TeachingAssistant/Registereds.cshtml
@@ -270,4 +270,5 @@
 <script src="~/Validation/teacher/registereds/detail.js"></script>
 <script src="~/Validation/teacher/registereds/filter.js"></script>
 <script src="~/Validation/teacher/registereds/phongvan.js"></script>
+<script src="~/Content/assets/libs/XLSX-Full/xlsx.full.min.js"></script>
 <script src="~/Validation/teacher/registereds/exportfile.js"></script>
