--- a/Views/ClassSection/_AddDeXuat.cshtml
+++ b/Views/ClassSection/_AddDeXuat.cshtml
@@ -1,5 +1,7 @@
 ﻿@model int?
-@using QuanLyCongTacTroGiangKhoaCNTT.Models
+@using QuanLyCongTacTroGiangKhoaCNTT.Models;
+@using System.Configuration;
+
 @{
     CongTacTroGiangKhoaCNTTEntities models = new CongTacTroGiangKhoaCNTTEntities();
     var lhp = models.LopHocPhan.Find(Model);
@@ -9,6 +11,8 @@
     string name = lhp.TenHP.ToLower();
     var lstDeXuat = models.DeXuatTroGiang.Where(w => w.LopHocPhan.TenHP.ToLower().Equals(name) && w.LopHocPhan.MaCBGD.ToLower().Equals(ma)).ToList();
     int i = 1;
+
+    string giotoida = ConfigurationManager.AppSettings["RemunerationMaxHouse"];
 }
 <div class="modal-body" id="loadcontentdexuat">
     <div class="row">
@@ -16,6 +20,7 @@
             <div>
                 <label class="form-label" for="lydo">Lý do đề xuất <span class="text-danger">*</span></label>
                 <input hidden id="idLHPDX" value="" />
+                <input hidden id="giotoida" value="@giotoida" />
                 <textarea type="text" id="lydo" rows="4" class="form-control" placeholder="Nhập lý do cần đề xuất trợ giảng"></textarea>
                 <span class="text-danger" id="valid-lydo"></span>
             </div>
@@ -50,11 +55,14 @@
         else
         {
             <div class="col-12">
-                <div class="mb-4 text-nowrap">
+                <div class="mb-3 text-nowrap">
                     <h3 class="text-center" for="tennganh">BẢNG MÔ TẢ CÔNG VIỆC GIAO CHO TA</h3>
                 </div>
             </div>
         }
+        <div class="col-12 mb-3" style="margin-top: -10px">
+            <small class="small"><i><i class="bi bi-info-circle-fill me-1"></i>Tổng số giờ quy đổi phải nhỏ hơn hoặc bằng @giotoida giờ.</i></small>
+        </div>
         <div class="col-12">
             <div class="table-card mt-0">
                 <table class="table table-hover" data-width="100%">
@@ -99,7 +107,6 @@
 
                         </tr>
 
-
                         <tr id="row-append">
                             <td colspan="7" class="text-center">
                                 <a id="addRow" data-bs-toggle="tooltip" data-bs-html="true" title="Thêm hàng mới" class="btn btn-sm btn-secondary">
@@ -111,6 +118,7 @@
                 </table>
             </div>
         </div>
+        <span class="text-danger mt-2" style="margin-bottom: -15px;" id="valid-giotoida"></span>
     </div>
 </div>
 
